Fixed attribution glitch on mobile

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     font-family: 'Outfit', sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
+    overflow: hidden;
 }
 
 .card-wrapper {
@@ -170,4 +171,11 @@ hr {
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+@media (max-width: 700px) {
+    .attribution {
+        bottom: 5px;
+        width: 100vw;
+    }
 }
